# moon

./: Cargo.toml  README.md
src/: lib.rs  main.rs  platform.rs
src/cli/: args.rs  mod.rs  subcommand.rs
src/cli/actions/: dev.rs  down.rs  mod.rs  openasar.rs  up.rs
src/discord/: flatpak.rs  install.rs  kind.rs  mod.rs
src/moonlight/: channel.rs  download.rs  mod.rs
