[package]
name = "moon"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.4.11", features = ["derive"] }
env_logger = "0.10.1"
flate2 = "1.0.28"
git2 = "0.18.1"
log = "0.4.20"
octocrab = "0.32.0"
reqwest = "0.11.22"
semver = { version = "1.0.20", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
serde_yaml = "0.9.27"
tar = "0.4.40"
tokio = { version = "1.35.0", features = ["full"] }
